sanger/sites/maternal-fetal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maternal-fetal-interface
  labels:
    app: maternal-fetal-interface
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: maternal-fetal-interface
