sanger/sites/maternal-fetal/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: maternal-fetal-interface
spec:
  virtualhost:
    fqdn: maternal-fetal-interface.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: maternal-fetal-interface
          port: 80
---
